--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         border-style: solid;
         border-color: red;
         border-width: 1;
+        touch-action: none;
       }
     </style>
   </head>
