lots of updates

--- a/index.html
+++ b/index.html
@@ -5,35 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tower-defense</title>
     <style>
-      html,
-      body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-      }
+html, body {
+  width: 100%; height: 100%; margin: 0;
+}
 
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+body {
+  display: flex; align-items: center; justify-content: center;
+  background: #0e1117;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
+}
 
-      canvas {
-        width: min(100vw, 100vh);
-        height: min(100vw, 100vh);
-        max-width: 100%;
-        max-height: 100%;
-        box-sizing: border-box;
-        display: block;
-        border-style: solid;
-        border-color: red;
-        border-width: 1;
-        touch-action: none;
-      }
+/* Game shell holds toolbar + canvas */
+#game-shell {
+  position: relative;
+  width: min(100vw, 100vh);
+  height: min(100vw, 100vh);
+  max-width: 100%; max-height: 100%;
+  box-sizing: border-box;
+}
+
+/* === Toolbar ============================================================ */
+#toolbar {
+  --bg: rgba(14,17,23,0.92);         /* solid-ish for sharpness */
+  --stroke: #3c4b66;                 /* outer stroke */
+  --hairline: rgba(135,230,255,.18); /* inner highlight line */
+
+  position: absolute; left: 0; right: 0; top: 0;
+  display: flex; gap: 8px; padding: 8px 10px;
+  background: var(--bg);
+  border-bottom: 1px solid var(--stroke);
+  /* inner 1px highlight for that “panel” look */
+  box-shadow: inset 0 1px 0 var(--hairline);
+  z-index: 2;
+}
+
+/* scroll if many towers */
+#toolbar { overflow-x: auto; scrollbar-width: thin; }
+
+/* Buttons */
+.toolbar-btn {
+  all: unset;
+  display: inline-flex; align-items: center; gap: 10px;
+  height: 40px;                       /* crisp hit target */
+  padding: 0 12px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #cdd6e5;
+  background: rgba(31,38,52,0.55);
+  border: 1px solid rgba(99,119,155,0.45);
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,0.06),   /* bevel */
+    0 0 0 0 transparent;                    /* placeholder for active ring */
+}
+
+.toolbar-btn:hover {
+  background: rgba(39,48,64,0.65);
+  border-color: rgba(135,230,255,0.35);
+}
+
+.toolbar-btn:focus-visible {
+  outline: 2px solid #87e6ffcc; outline-offset: 2px;
+}
+
+/* Selected: clean, sharp */
+.toolbar-btn.is-active {
+  border-color: #87e6ff;
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,0.10),
+    0 0 0 2px rgba(135,230,255,0.20);        /* soft ring, still crisp */
+}
+
+/* Thumb (render at DPR, scale down) */
+.toolbar-thumb {
+  width: 32px; height: 32px;
+  display: inline-block;
+  image-rendering: crisp-edges; /* falls back to auto elsewhere */
+  image-rendering: -webkit-optimize-contrast;
+}
+
+/* Canvas below toolbar */
+#game_canvas {
+  position: absolute; inset: 0;
+  width: 100%; height: 100%;
+  display: block; box-sizing: border-box;
+  border: 1px solid red; /* your debug border */
+  touch-action: none; z-index: 1;
+}
+
     </style>
   </head>
   <body>
-    <canvas id="game_canvas" width="1000" height="1000"></canvas>
+    <div id="game-shell">
+      <!-- HTML toolbar overlay; populate from your TS (e.g., main.ts) -->
+      <div id="toolbar" role="toolbar" aria-label="Tower selection"></div>
+
+      <!-- Game canvas -->
+      <canvas id="game_canvas" width="1000" height="1000"></canvas>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
